source/stylesheets/all.css.scss
@charset "utf-8";

body {
  background: #f8f8f8;
  font-family: 'Montserrat', sans-serif;
}

.clear {
  clear: both;
}

@font-face {
	font-family: 'FixedSys';
	src: url('/font/Fixedsys500c.eot');
	src: local('☺'), url('/font/Fixedsys500c.woff') format('woff'), url('/font/Fixedsys500c.ttf') format('truetype'), url('/font/Fixedsys500c.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}

.mono {
  font-family: FixedSys, monospace;
  font-weight: 700;
}

#pc {
  background: url("/images/pc.png") no-repeat center bottom;
  height: 1620px;
  margin: 0 auto;
  padding: 0;
  padding-top: 1px;
  width: 100%;
  position: relative;
  
  .inner {
    width: 900px;
    margin: 0 auto;
  }

  .type {
    color: #fff;
    font-size: 34px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 30px;
  }

  #search-media {
    $padding: 20px;

    border: 5px solid #fff;
    display: none;
    margin-top: 100px;
    margin-bottom: 140px;
    padding: $padding;
    position: relative;

    .current {
      background: #fff;
      color: #000;
      display: inline-block;
      padding: 12px 15px 14px 15px;
      position: absolute;
      top: -44px;
      width: auto;

      h3 {
        margin: 0;
        font-size: 28px;
      }
    }

    .switch {
      $color: #41ddf5;

      position: absolute;
      right: $padding;
      top: -30px;

      p {
        color: $color;
        display: inline;
      }

      a {
        color: #41ddf5;
      }
    }

    .content {
      overflow: hidden;
      padding-top: 10px;
      a {
        color: #fff;
        display: inline-block;
        font-size: 20px;
        margin-bottom: 15px;
        margin-right: 15px;
        padding: 10px 40px;
        text-decoration: none;

        text-shadow: 0 0 1px #000000;

        border-radius: 3px;
        background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#6ff0fa), to(#2374d6));
      }
    }

    .disclaimer {
      background: #ffffff;
      display: none;
      padding: 10px;
      position: absolute;
      width: 830px;

      img {
        float: left;
        margin-top: 10px;
      }

      p {
        bottom: 10px;
        float: right;
        font-size: 14px;
        margin-top: 5px;
        margin-bottom: 5px;
        width: 750px;
      }
      .shadow {
        background: transparent;
        position: absolute;
        border-bottom: 5px solid #fff;
        border-right: 4px solid #fff;
        height: 94px;
        width: 843px;
        bottom: -8px;
      }
    }
  }


  #sign {
    background: transparent url("/images/metal-trim.png") no-repeat center top;
    height: 320px;
    //margin-left: -574px;
    //padding: 0 216px;
    //padding-bottom: 100px;
    position: absolute;
    left: 50%;
    margin-left: -415px;
    bottom: 30px;
    width: 830px;
    padding: 0;
    
    .pad {
      padding: 0 35px;
    }

    h1 {
      font-size: 46px;
      font-weight: 700;
      margin-bottom: 0;
    }

    h2 {
      font-size: 34px;
      font-weight: 500;
      margin-top: 0px;
    }

    h4 {
      font-size: 20px;
      font-weight: normal;
      margin: 0 0 20px 0;
      padding: 0;
    }

    form {
      
      .field {
        float: left;
      }

      .actions {
      }

      input[type="text"] {
        box-shadow: 0 1px 2px white;
      }

      input[type="submit"] {
        background: url("/images/sign.png");
        border: none;
        height: 49px;
        padding: 16px;
        text-indent: -9999px;
        width: 204px;
        -webkit-appearance: none;
      }
    }

    p {
      font-size: 17px;
    }
  }
  .social-buttons {
    display: none;
  }
}

form {
  input[type="text"] {
    border: 1px solid #909090;
    font-size: 18px;
    margin-right: 10px;
    padding: 13px;


    -webkit-box-shadow: inset 5px 5px  5px rgba(0,0,0,0.09);

    border-radius: 5px;
  }
}

#main {
  margin: 0 auto;
  width: 940px;

  .title {
    font-size: 67px;
    text-align: center;
    margin-bottom: 25px;
  }

  h2 {
    font-size: 36px;
    &.thin {
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-bottom: 0;
      width: 800px;
    }
    &.center {
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: 40px;
      text-align: center;
    }
  }

  h3 {
    font-size: 30px;
    font-weight: normal;
    text-align: center;
  }

  p {
    font-size: 18px;
    line-height: 24px;
  }

  .use-examples {
    display: block;
    margin: 0 auto;
    padding-left: 45px;
  }
  .social-buttons {
    margin-left: 60px;
  }
}

.social-buttons {
  margin-left: 20px;
  .social {
    background: url("/images/social-buttons.png");
    display: inline;
    float: left;
    height: 52px;
    margin-left: 80px;
    margin-bottom: 30px;
    width: 285px;

    &.twitter {
      background-position: 0 -54px;
    }
    &.tumblr {
      background-position: 0 106px;
    }
    &.google {
      background-position: 0 53px;
    }
  }
}

footer {
  background: #ededed;
  padding-bottom: 20px;

  -webkit-box-shadow: inset 0px 5px 5px rgba(0,0,0,0.15);
  .container {
    margin: 0 auto;
    padding-top: 30px;
    width: 940px;
  }

  #logos {
    a {
      float: left;
    }

    .fftf {
      margin-top: 27px;
      margin-right: 105px;
    }

    .eff {
      margin-top: 7px;
      margin-right: 105px;
    }
  }
  hr {
    height: 0;
    border: none;
    border-top: 1px solid #cccccc;
    margin-top: 20px;
  }

  h4 {
    margin-bottom: 0;
    margin-top: 40px;
    float: left;
  }

  .nav {
    $color: #267cd0;

    float: right;
    margin-top: 40px;

    a {
      color: $color;
      text-decoration: none;
    }

    p {
      color: $color;
      display: inline;
    }
  }
}

select {
  border: none;  
  background:  
  none; outline:  
  none; opacity: 0;  
  -webkit-appearance: none;  
  filter: alpha(opacity=0); 
}

.selectbox select {  
  z-index: 10;
  height: 50px;
  position: relative;  
  border: none;  
  background: none;  
  outline: none;  
  padding: 4px 12px 4px 32px;  
  opacity: 0;  
  -webkit-appearance: none;  
  filter: alpha(opacity=0);  
}  

.selecttext {  
  z-index: 9;  
  position: absolute;  
  left: 15px;
  display: inline-block;  
  *display: inline;
  zoom: 1;
  line-height: 50px;
  background: transparent;
  font-size: 26px;
  color: black; 
} 

.select-container {
  text-align: center;
  padding: 30px 0;
}
 
.selectbox {  
  position: relative;  
  margin: 0 auto;
  display: inline-block;
  *display: inline;  
  zoom: 1;
  height: 50px;
  border: 3px solid black;  
  background: white;  
  background-image: -moz-linear-gradient(top, white, #e6e6e6);  
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, white), color-stop(1, #e6e6e6));  
  background-image: linear-gradient(top, white, #e6e6e6);  
  border-radius: 2px;
  box-shadow: inset 2px 2px 4px #ccc, 0 1px 1px #d2d2d2;  
}

.select-arrow {
  background: url('/images/select-arrow.jpg');
  height: 50px;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  width: 114px;
  z-index: 9;
}

input[type="checkbox"] {
  display: none;
}
input[type="checkbox"] + label {
  line-height: 20px;
}
input[type="checkbox"] + label span {
  background: url('/images/checkbox.png') left top no-repeat;
  width: 20px;
  height: 20px;
  display: inline-block;
  margin-top: -4px;
  margin-right: 5px;
  cursor: pointer;
  vertical-align: middle;
  border: none;
}
input[type="checkbox"]:checked + label span {
  background: url('/images/checkbox.png') left -20px no-repeat;
}

#modal {
  width: 850px;
  position: fixed;
  left: 50%;
  top: 200px;
  margin-left: -425px;
  z-index: 1000;
  border: 6px solid #717171;
  border-radius: 6px;
  box-shadow: 0 3px 8px #333;
  
  .close {
    position: absolute;
    top: 15px;
    right: 15px;
    text-indent: -5000px;
    overflow: hidden;
    z-index: 1001;
    width: 13px;
    height: 13px;
    background: transparent url('/images/x.png');
    opacity: 0.6;
    
    &:hover {
      opacity: 1;
    }
  }
  
  .title {
    font-size: 38px;
    text-align: center;
    background: #f8ac1a;
    line-height: 100px;
    border-bottom: 2px solid #d1a624;
    text-shadow: 0 1px 1px white;
  }
  
  .content {
    background: white;
    padding: 20px 50px 50px 50px;
    
    p {
      font-size: 16px;
      color: #717171;
    }
    
    p.lead {
      text-align: center;
      font-size: 20px;
      font-weight: bold;
      color: black;
      margin-bottom: 30px;
    }
  }
  
  form {
    .field {
      float: left;
    }

    input[type="text"] {
      -webkit-box-shadow: inset 5px 5px  5px rgba(0,0,0,0.09);
    }

    input[type="submit"] {
      background: url("/images/sign.png");
      border: none;
      height: 49px;
      padding: 16px;
      text-indent: -9999px;
      width: 204px;
      -webkit-appearance: none;
    }
  }
}

